Add placement and target board grid
and add cubit for click states

--- a/assets/langs/en-US.json
+++ b/assets/langs/en-US.json
@@ -1,3 +1,10 @@
 {
-  "appName": "8 Stone"
+  "appName": "8 Stone",
+  "buttonTitle": {
+    "start": "Start"
+  },
+  "homeScreen": {
+    "placement": "Placement",
+    "targeted": "Targeted"
+  }
 }
