--- a/assets/langs/tr-TR.json
+++ b/assets/langs/tr-TR.json
@@ -1,3 +1,10 @@
 {
-  "appName": "8 Taş"
+  "appName": "8 Taş",
+  "buttonTitle": {
+    "start": "Başla"
+  },
+  "homeScreen": {
+    "placement": "Yerleştirme",
+    "targeted": "Hedeflenen"
+  }
 }
