add app icon and some bug fix

--- a/assets/langs/tr-TR.json
+++ b/assets/langs/tr-TR.json
@@ -20,7 +20,7 @@
     "target": "Hedef"
   },
   "howToPlay": {
-    "title": "How to Play?",
+    "title": "Nasıl Oynanır?",
     "messageOne": "Tahta üzerinde 8 taş ve 1 boş alan vardır.",
     "messageTwo": "Amaç: taşları hedef dizilime (1'den 8'e kadar sıralı) getirmektir.",
     "messageThree": "Önce ‘Hedef Tahta’sına göz at, ardından ‘Yerleştirme Tahtası’nı oluştur.",
