--- a/dataset_review_app/assets/langs/tr-TR.json
+++ b/dataset_review_app/assets/langs/tr-TR.json
@@ -9,5 +9,14 @@
   "welcomeScreen": {
     "messageTitle": "Veri setlerinizi kolayca analiz edin ve sonuçları grafiklerle görüntüleyin",
     "messageSubTitle": "Devam etmek için 'Başlayın' butonuna dokunun"
+  },
+  "homeScreen": {
+    "searchBarHintText": "Dosya ara...",
+    "gb": "GB",
+    "of": "ı",
+    "categories": "Kategoriler",
+    "documents": "Dokümanlar",
+    "download": "İndirilen",
+    "uploaded": "Yüklenen"
   }
 }
